# mcp-retrieval-spec

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
jmri/conformance/: README.md  __init__.py  __main__.py  adapter.py  cases.py  report.py  runner.py
tests/: test_conformance.py
