[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmri-sdk"
version = "1.1.1"
description = "jMRI — token-efficient context retrieval for MCP agents. Python SDK client, reference server, and conformance suite."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "J. Gravelle", email = "j@gravelle.us" }]
keywords = ["mcp", "ai", "agents", "retrieval", "jmri", "jcodemunch", "jdocmunch", "context-window", "tokens"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
jmri-server = "jmri.reference.server:main"
jmri-conformance = "jmri.conformance.__main__:main"

[project.urls]
Homepage = "https://j.gravelle.us/jCodeMunch/"
Repository = "https://github.com/jgravelle/mcp-retrieval-spec"
Documentation = "https://github.com/jgravelle/mcp-retrieval-spec/blob/main/SPEC.md"
"Bug Tracker" = "https://github.com/jgravelle/mcp-retrieval-spec/issues"

[tool.hatch.build.targets.wheel]
packages = ["jmri"]
